Added some prints to the doctests. Updated Makefile to run all tests.
--HG--
extra : convert_revision : svn%3A0beaa508-17e7-11de-9433-ad2e3fad96c5/trunk%4024

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,22 +1,8 @@
 test: unittest doctest
 
-unittest: test_abscissas test_weights test_tesseroid
-		
-test_abscissas:
-	echo "\nTESTING ABSCISSAS CLASS:\n"
-	python test_abscissas.py -v
-
-test_weights:
-	echo "\nTESTING WEIGHTS CLASS:\n"
-	python test_weights.py -v
-
-test_tesseroid:
-	echo "\nTESTING TESSEROID CLASS:\n"
-	python test_tesseroid.py -v
+unittest:
+	python tests/test_all.py -v
 
 doctest:
-	echo "\nDOCTEST FOR GLQ.PY:\n"
-	python glq.py
-
-	echo "\nDOCTEST FOR TESSEROID.PY:\n"
-	python tesseroid.py
+	python mods/glq.py
+	python mods/tesseroid.py
