Auto set version string and date at build time
Uses versioneer to get the version number from git and make the
version.c file from a templace. Also sets the year for the copyright
notice.
Missing still support for the docs and dist version strings.

--- a/src/lib/version.template
+++ b/src/lib/version.template
@@ -1,18 +1,21 @@
 /*
 Hold the version number of the project.
+
+This file will be modified by SConstruct to include the version number and
+year.
 */
 
 #include <stdio.h>
 #include "version.h"
 
 /* Current project version number */
-const char tesseroids_version[] = "1.1.1";
+const char tesseroids_version[] = "$VERSION";
 
 /* Print version and license information */
 void print_version(const char *progname)
 {
     printf("%s (Tesseroids project) %s\n\n", progname, tesseroids_version);
-    printf("Copyright (C) 2011-2014, Leonardo Uieda.\n");
+    printf("Copyright (C) 2011-$YEAR, Leonardo Uieda.\n");
     printf("This software is distributed under the terms of the BSD License:\n");
     printf("<http://tesseroids.readthedocs.org/en/latest/license.html>\n");
     printf("This is free software: ");
