--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ compiler: gcc
 env:
   - PATH=$TRAVIS_BUILD_DIR/bin:$PATH MPLCONFIGDIR=$TRAVIS_BUILD_DIR
 install:
+  - sudo apt-get update
   - sudo apt-get install python-matplotlib python-numpy python-mpltoolkits.basemap
   # For cross-compiling 32bit binaries (mode=bin32)
   - sudo apt-get install libc6-dev-i386
