--- a/bench/Makefile
+++ b/bench/Makefile
@@ -11,8 +11,12 @@ result.txt: model.txt
 	@echo "Computer specs" > result.txt
 	@cat /proc/cpuinfo | grep -m 1 -i -E 'model name' >> result.txt
 	@cat /proc/meminfo | grep -m 1 -i -E 'MemTotal' >> result.txt
+	@echo "\nTesseroids version\n" >> result.txt
+	@tessgz --version >> result.txt
 	@echo ""
 	@../bin/tessgrd -r-8/8/-8/8 -b51/51 -z2000 > grid.txt
+	@echo "\nModel size: `wc -l model.txt`" >> result.txt
+	@echo "Grid size: `wc -l grid.txt`" >> result.txt
 	@echo "Run the tesspot program"
 	@echo "" >> result.txt
 	@echo "Time spent on potential:" >> result.txt
