Fix piping bench results to $@

--- a/bench/Makefile
+++ b/bench/Makefile
@@ -12,12 +12,12 @@ $(RESULT): model.txt
 	@echo "Computer specs" > $@
 	@cat /proc/cpuinfo | grep -m 1 -i -E 'model name' >> $@
 	@cat /proc/meminfo | grep -m 1 -i -E 'MemTotal' >> $@
-	@echo "\nTesseroids version\n" >> result.txt
-	@tessgz --version >> result.txt
-	@echo ""
+	@echo "\nTesseroids version\n" >> $@
+	@tessgz --version >> $@
+	@echo "" >> $@
 	@../bin/tessgrd -r-8/8/-8/8 -b51/51 -z2000 > grid.txt
-	@echo "\nModel size: `wc -l model.txt`" >> result.txt
-	@echo "Grid size: `wc -l grid.txt`" >> result.txt
+	@echo "\nModel size: `wc -l model.txt`" >> $@
+	@echo "Grid size: `wc -l grid.txt`" >> $@
 	@echo "Run the tesspot program"
 	@echo "" >> $@
 	@echo "Time spent on potential:" >> $@
