--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,15 @@
-name: tesseroids
+name: tesseroids2
 dependencies:
-    - python=2.7
+    - python=3.5
     - pip
-    - scons
     - numpy
+    - numba
     - matplotlib
+    - basemap
+    - pytest
+    - pytest-cov
+    - coverage
+    - pep8
     - sphinx
     - pip:
         - sphinx_rtd_theme
